MODBULKOPS-136 - Reduce impact of "No changes required" on "Are you sure?" form performance (#118)