@@ -1,6 +1,8 @@
 package org.folio.bulkops.processor;
 
 import static java.util.Objects.isNull;
+import static org.folio.bulkops.domain.bean.InventoryItemStatus.NameEnum.AVAILABLE;
+import static org.folio.bulkops.domain.bean.InventoryItemStatus.NameEnum.MISSING;
 import static org.folio.bulkops.domain.dto.UpdateActionType.ADD_TO_EXISTING;
 import static org.folio.bulkops.domain.dto.UpdateActionType.CHANGE_TYPE;
 import static org.folio.bulkops.domain.dto.UpdateActionType.CLEAR_FIELD;
@@ -11,6 +13,7 @@ import static org.folio.bulkops.domain.dto.UpdateActionType.MARK_AS_STAFF_ONLY;
 import static org.folio.bulkops.domain.dto.UpdateActionType.REMOVE_ALL;
 import static org.folio.bulkops.domain.dto.UpdateActionType.REMOVE_MARK_AS_STAFF_ONLY;
 import static org.folio.bulkops.domain.dto.UpdateActionType.REPLACE_WITH;
+import static org.folio.bulkops.domain.dto.UpdateActionType.SET_TO_TRUE;
 import static org.folio.bulkops.domain.dto.UpdateOptionType.ADMINISTRATIVE_NOTE;
 import static org.folio.bulkops.domain.dto.UpdateOptionType.CHECK_IN_NOTE;
 import static org.folio.bulkops.domain.dto.UpdateOptionType.CHECK_OUT_NOTE;
@@ -25,9 +28,6 @@ import static org.folio.bulkops.processor.ItemDataProcessor.ADMINISTRATIVE_NOTE_
 import static org.folio.bulkops.processor.ItemDataProcessor.CHECK_IN_NOTE_TYPE;
 import static org.folio.bulkops.processor.ItemDataProcessor.CHECK_OUT_NOTE_TYPE;
 import static org.folio.bulkops.processor.ItemDataProcessor.ITEM_NOTE_TYPE_ID_KEY;
-import static org.folio.bulkops.service.ItemReferenceService.MODULE_NAME;
-import static org.folio.bulkops.service.ItemReferenceService.STATUSES_CONFIG_NAME;
-import static org.folio.bulkops.util.Constants.BULK_EDIT_CONFIGURATIONS_QUERY_TEMPLATE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -36,27 +36,27 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import org.apache.commons.lang3.StringUtils;
 import org.folio.bulkops.BaseTest;
 import org.folio.bulkops.domain.bean.CirculationNote;
-import org.folio.bulkops.domain.bean.ConfigurationCollection;
 import org.folio.bulkops.domain.bean.HoldingsRecord;
 import org.folio.bulkops.domain.bean.InventoryItemStatus;
 import org.folio.bulkops.domain.bean.Item;
 import org.folio.bulkops.domain.bean.ItemLocation;
 import org.folio.bulkops.domain.bean.ItemNote;
 import org.folio.bulkops.domain.bean.LoanType;
-import org.folio.bulkops.domain.bean.ModelConfiguration;
-import org.folio.bulkops.domain.bean.ResultInfo;
 import org.folio.bulkops.domain.dto.Action;
 import org.folio.bulkops.domain.dto.Parameter;
 import org.folio.bulkops.domain.dto.UpdateActionType;
 import org.folio.bulkops.domain.dto.UpdateOptionType;
 import org.folio.bulkops.repository.BulkOperationExecutionContentRepository;
 import org.folio.bulkops.service.ErrorService;
+import org.folio.bulkops.service.HoldingsReferenceService;
+import org.folio.bulkops.service.ItemReferenceService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -74,6 +74,10 @@ class ItemDataProcessorTest extends BaseTest {
   DataProcessorFactory factory;
   @MockBean
   ErrorService errorService;
+  @MockBean
+  private HoldingsReferenceService holdingsReferenceService;
+  @MockBean
+  private ItemReferenceService itemReferenceService;
 
   private DataProcessor<Item> processor;
 
@@ -87,19 +91,8 @@ class ItemDataProcessorTest extends BaseTest {
     if (isNull(processor)) {
       processor = factory.getProcessorFromFactory(Item.class);
     }
-    when(configurationClient.getByQuery(String.format(BULK_EDIT_CONFIGURATIONS_QUERY_TEMPLATE, MODULE_NAME, STATUSES_CONFIG_NAME)))
-      .thenReturn(
-        new ConfigurationCollection()
-          .withConfigs(List.of(new ModelConfiguration()
-            .withId("6e2fcd41-3d6e-40e7-871d-4ae2bd494a59")
-            .withModule("BULKEDIT")
-            .withConfigName("statuses")
-            .with_default(true)
-            .withEnabled(true)
-            .withValue("{\"Available\":[\"Missing\"],\"Missing\":[\"Withdrawn\"]}")))
-          .withTotalRecords(1)
-          .withResultInfo(new ResultInfo()
-            .withTotalRecords(1)));
+    when(itemReferenceService.getAllowedStatuses(AVAILABLE.getValue()))
+      .thenReturn(Collections.singletonList(MISSING.getValue()));
   }
 
   @Test
@@ -111,7 +104,14 @@ class ItemDataProcessorTest extends BaseTest {
 
   @Test
   void testClearItemLocationAndLoanType() {
+    var holdingsId = UUID.randomUUID().toString();
+    var locationId = UUID.randomUUID().toString();
+    when(holdingsReferenceService.getHoldingsRecordById(holdingsId))
+      .thenReturn(new HoldingsRecord().withPermanentLocationId(locationId));
+    when(itemReferenceService.getLocationById(locationId))
+      .thenReturn(new ItemLocation().withId(locationId));
     var item = new Item()
+      .withHoldingsRecordId(holdingsId)
       .withPermanentLocation(new ItemLocation().withId(UUID.randomUUID().toString()).withName("Permanent location"))
       .withTemporaryLocation(new ItemLocation().withId(UUID.randomUUID().toString()).withName("Temporary location"))
       .withPermanentLoanType(new LoanType().withId(UUID.randomUUID().toString()).withName("Permanent loan type"));
@@ -138,8 +138,8 @@ class ItemDataProcessorTest extends BaseTest {
       .withId(updatedLoanTypeId)
       .withName("New loan type");
 
-    when(locationClient.getLocationById(updatedLocationId)).thenReturn(updatedLocation);
-    when(loanTypeClient.getLoanTypeById(updatedLoanTypeId)).thenReturn(updatedLoanType);
+    when(itemReferenceService.getLocationById(updatedLocationId)).thenReturn(updatedLocation);
+    when(itemReferenceService.getLoanTypeById(updatedLoanTypeId)).thenReturn(updatedLoanType);
 
     var item = new Item()
       .withPermanentLocation(new ItemLocation().withId(UUID.randomUUID().toString()).withName("Permanent location"))
@@ -191,8 +191,8 @@ class ItemDataProcessorTest extends BaseTest {
     var holdingsLocationId = UUID.randomUUID().toString();
     var holdingsLocation = ItemLocation.builder().id(holdingsLocationId).name("Holdings' location").build();
 
-    when(holdingsClient.getHoldingById(holdingsId)).thenReturn(new HoldingsRecord().withPermanentLocationId(holdingsLocationId));
-    when(locationClient.getLocationById(holdingsLocationId)).thenReturn(holdingsLocation);
+    when(holdingsReferenceService.getHoldingsRecordById(holdingsId)).thenReturn(new HoldingsRecord().withPermanentLocationId(holdingsLocationId));
+    when(itemReferenceService.getLocationById(holdingsLocationId)).thenReturn(holdingsLocation);
 
     var item = new Item()
       .withHoldingsRecordId(holdingsId)
@@ -223,7 +223,8 @@ class ItemDataProcessorTest extends BaseTest {
       .temporaryLocation(isNull(temporaryLocation) ? null : ItemLocation.builder().id(UUID.randomUUID().toString()).name("temporary").build())
       .build();
 
-    when(locationClient.getLocationById(newLocationId)).thenReturn(newLocation);
+    when(itemReferenceService.getLocationById(newLocationId))
+      .thenReturn(newLocation);
 
     var rules = rules(rule(optionType, REPLACE_WITH, newLocationId));
 
@@ -260,7 +261,7 @@ class ItemDataProcessorTest extends BaseTest {
   @Test
   void testUpdateAllowedItemStatus() {
     var item = new Item()
-      .withStatus(new InventoryItemStatus().withName(InventoryItemStatus.NameEnum.AVAILABLE));
+      .withStatus(new InventoryItemStatus().withName(AVAILABLE));
 
     var rules = rules(rule(STATUS, REPLACE_WITH, InventoryItemStatus.NameEnum.MISSING.getValue()));
     var result = processor.process(IDENTIFIER, item, rules);
@@ -277,7 +278,7 @@ class ItemDataProcessorTest extends BaseTest {
     assertFalse(actual.shouldBeUpdated);
 
     actual = processor.process(IDENTIFIER, new Item()
-      .withStatus(new InventoryItemStatus().withName(InventoryItemStatus.NameEnum.AVAILABLE)), rules(rule(STATUS, REPLACE_WITH, InventoryItemStatus.NameEnum.IN_TRANSIT.getValue())));
+      .withStatus(new InventoryItemStatus().withName(AVAILABLE)), rules(rule(STATUS, REPLACE_WITH, InventoryItemStatus.NameEnum.IN_TRANSIT.getValue())));
     assertNotNull(actual.getUpdated());
     assertFalse(actual.shouldBeUpdated);
   }
@@ -294,7 +295,8 @@ class ItemDataProcessorTest extends BaseTest {
   void shouldUpdateSuppressFromDiscovery(UpdateActionType type) {
     var actual = processor.process(IDENTIFIER, new Item(), rules(rule(SUPPRESS_FROM_DISCOVERY, type, StringUtils.EMPTY)));
     assertNotNull(actual.getUpdated());
-    assertTrue(actual.shouldBeUpdated);
+    var expectedDiscoverySuppress = SET_TO_TRUE.equals(type);
+    assertEquals(expectedDiscoverySuppress, actual.getUpdated().getDiscoverySuppress());
   }
 
   @Test
